--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,13 @@
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2.0.0",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/mime": "6.0.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/runtime": "6.0.*",
         "symfony/security-bundle": "6.0.*",
         "symfony/stopwatch": "6.0.*",
         "symfony/twig-bundle": "6.0.*",
+        "symfony/ux-chartjs": "^2.7",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "6.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
